--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ai-blogx",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://callmeAsadUllah.github.io/ai-blogx",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -12,6 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +36,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0",
+    "dotenv": "^16.3.1",
+    "gh-pages": "^6.0.0",
+    "react-pdf": "^7.4.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
+    "tailwindcss": "^3.3.3"
   }
 }
